--- a/testlink/index.html
+++ b/testlink/index.html
@@ -1,1 +1,50 @@
+<html>
+<head>
+</head>
 
+<body>
+<a href="maps://" onclick="clickHandler()">Open an installed app</a>
+<br/><br/>
+<a href="xmapsx://" onclick="clickHandler()">App not installed</a>
+<br/><br/>
+<a href="mymojiStage://" onclick="clickHandler()">Bora 測試</a>
+<br/>
+
+<script>
+    var hideShowCount = 0 ;
+    window.addEventListener("pagehide", function() {
+        hideShowCount++;
+        showEventTime('pagehide');
+    });
+
+    window.addEventListener("pageshow", function() {
+        hideShowCount++;
+        showEventTime('pageshow');
+    });
+
+    function clickHandler(){
+        var hideShowCountAtClick = hideShowCount;
+        showEventTime('click');
+        setTimeout(function () {
+                      showEventTime('timeout function ' + (hideShowCount-hideShowCountAtClick) + ' hide/show events');
+                      if (hideShowCount == hideShowCountAtClick){
+                              // app is not installed, go to App Store
+                           window.location = 'http://itunes.apple.com/app';
+                      }
+                   }, 1000);
+    }
+
+    function currentTime()
+    {
+        return Date.now()/1000;
+    }
+
+    function showEventTime(event){
+        var time = currentTime() ;
+        document.body.appendChild(document.createElement('br'));
+        document.body.appendChild(document.createTextNode(time + ' ' + event));
+    }
+</script>
+</body>
+
+</html>
