--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -5,13 +5,23 @@
     <script src="browser-deeplink.js" type="text/javascript"></script>
     <script type="text/javascript">
 
+    // deeplink.setup({
+    //     iOS: {
+    //         appId: "284882215",
+    //         appName: "facebook",
+    //     },
+    //     android: {
+    //         appId: "com.facebook.katana"
+    //     }
+    // });
+
     deeplink.setup({
         iOS: {
-            appId: "284882215",
-            appName: "facebook",
+            appId: "1558996892",
+            appName: "mymoji",
         },
         android: {
-            appId: "com.facebook.katana"
+            appId: "com.taiwanmobile.myMojiApp"
         }
     });
 
@@ -40,5 +50,7 @@
 </head>
 <body>
     <a href="#" data-uri="fb://profile" onclick="clickHandler(this.dataset.uri)">open fb://profile</a>
+    </br>
+    <a href="#" data-uri="mymojiStage://" onclick="clickHandler(this.dataset.uri)">open mymojiStage://</a>
 </body>
 </html>
