--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -51,6 +51,6 @@
 <body>
     <a href="#" data-uri="fb://profile" onclick="clickHandler(this.dataset.uri)">open fb://profile</a>
     </br>
-    <a href="#" data-uri="mymojiStage://" onclick="clickHandler(this.dataset.uri)">open mymojiStage://</a>
+    <a href="#" data-uri="mymojiStage://profile" onclick="clickHandler(this.dataset.uri)">open mymojiStage://</a>
 </body>
 </html>
