--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -5,15 +5,15 @@
     <script src="browser-deeplink.js" type="text/javascript"></script>
     <script type="text/javascript">
 
-    deeplink.setup({
-        iOS: {
-            appId: "284882215",
-            appName: "facebook",
-        },
-        android: {
-            appId: "com.facebook.katana"
-        }
-    });
+    // deeplink.setup({
+    //     iOS: {
+    //         appId: "284882215",
+    //         appName: "facebook",
+    //     },
+    //     android: {
+    //         appId: "com.facebook.katana"
+    //     }
+    // });
 
     deeplink.setup({
         iOS: {
