--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -21,7 +21,7 @@
             appName: "mymoji",
         },
         android: {
-            appId: "com.taiwanmobile.myMojiApp"
+            appId: "com.taiwanmobile.myMojiStage"
         }
     });
 
