--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -5,25 +5,25 @@
     <script src="browser-deeplink.js" type="text/javascript"></script>
     <script type="text/javascript">
 
-    // deeplink.setup({
-    //     iOS: {
-    //         appId: "284882215",
-    //         appName: "facebook",
-    //     },
-    //     android: {
-    //         appId: "com.facebook.katana"
-    //     }
-    // });
-
     deeplink.setup({
         iOS: {
-            appId: "1558996892",
-            appName: "mymoji",
+            appId: "284882215",
+            appName: "facebook",
         },
         android: {
-            appId: "com.taiwanmobile.myMojiStage"
+            appId: "com.facebook.katana"
         }
     });
+
+    // deeplink.setup({
+    //     iOS: {
+    //         appId: "1558996892",
+    //         appName: "mymoji",
+    //     },
+    //     android: {
+    //         appId: "com.taiwanmobile.myMojiStage"
+    //     }
+    // });
 
     function clickHandler(uri) {
         deeplink.open(uri);
@@ -49,8 +49,8 @@
     </style>
 </head>
 <body>
-<!--     <a href="#" data-uri="fb://profile" onclick="clickHandler(this.dataset.uri)">open fb://profile</a>
-    </br> -->
+    <a href="#" data-uri="fb://profile" onclick="clickHandler(this.dataset.uri)">open fb://profile</a>
+    </br>
     <a href="#" data-uri="mymojiStage://" onclick="clickHandler(this.dataset.uri)">open mymojiStage://</a>
 </body>
 </html>
