--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -53,6 +53,6 @@
     </br>
     <a href="#" data-uri="mymojiStage://open" onclick="clickHandler(this.dataset.uri)">open mymojiStage://open</a>
      </br>
-    <a href="#" data-uri="mymojiStage://" onclick="clickHandler(this.dataset.uri)">open mymojiStage://</a>
+    <a href="#" data-uri="mymojiStage" onclick="clickHandler(this.dataset.uri)">open mymojiStage://</a>
 </body>
 </html>
