--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -52,7 +52,11 @@
     <a href="#" data-uri="fb://profile" onclick="clickHandler(this.dataset.uri)">open fb://profile</a>
     </br>
     <a href="#" data-uri="mymojiStage://open" onclick="clickHandler(this.dataset.uri)">open mymojiStage://open</a>
-     </br>
+    </br>
     <a href="#" data-uri="mymojiStage" onclick="clickHandler(this.dataset.uri)">open mymojiStage://</a>
+    </br>
+    <a href="#" data-uri="mymojiStage://open?ln=/page_sticker_store" onclick="clickHandler(this.dataset.uri)">open 貼圖商店</a>
+    </br>
+    <a href="#" data-uri="mymojiStage://open?ln=/delete_avatar" onclick="clickHandler(this.dataset.uri)">open 刪除模型</a>
 </body>
 </html>
