--- a/testlink/index.html
+++ b/testlink/index.html
@@ -7,7 +7,7 @@
 <br/><br/>
 <a href="xmapsx://" onclick="clickHandler()">App not installed</a>
 <br/><br/>
-<a href="mymojiStage://" onclick="clickHandler()">Bora 測試</a>
+<a href="mymojiStage://open" onclick="clickHandler()">Bora 測試</a>
 <br/>
 
 <script>
