--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -58,6 +58,7 @@
     <a href="#" data-uri="mymojiStage://open?ln=/page_sticker_store" onclick="clickHandler(this.dataset.uri)">open 貼圖商店</a>
     </br>
     <a href="#" data-uri="mymojiStage://open?ln=/delete_avatar" onclick="clickHandler(this.dataset.uri)">open 刪除模型</a>
-    123
+    456
+    <iframe src="mymojiStage://open"></iframe>
 </body>
 </html>
