--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -70,7 +70,9 @@
     // testa.click();
 
     let testa = document.getElementById("test_button");
-    testa.click();
+    
+
+    document.getElementById('test_button').addEventListener('load', testa.click(), false);
 
     </script>
     
