--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -33,7 +33,7 @@
     <a href="#" data-uri="mymojiStage://open?ln=/delete_avatar" onclick="clickHandler(this.dataset.uri)">open 刪除模型</a>
     123
     </br>
-    <button id="test_button" href="#" data-uri="mymojiStage://open" onclick="clickHandler(this.dataset.uri)">open mymojiStage://open</button>
+    <button id="test_button" href="#">open mymojiStage://open</button>
     </br>
 </body>
 
@@ -70,9 +70,12 @@
     // testa.click();
 
     let testa = document.getElementById("test_button");
-    
-
     document.getElementById('test_button').addEventListener('load', testa.click(), false);
+
+    document.getElementById('test_button').addEventListener('click', () => {
+        // window.location.assign("slack://open"); // your deep link here
+        clickHandler("mymojiStage://open");
+    });
 
     </script>
     
