--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -70,7 +70,7 @@
     // testa.click();
 
     let testa = document.getElementById("test_button");
-    testa.addEventListener('load', window.location.assign("fb://profile"), false);
+    testa.addEventListener('load', window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end"), false);
         // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
 
     testa.addEventListener('click', () => {
