--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -70,12 +70,14 @@
     // testa.click();
 
     let testa = document.getElementById("test_button");
-    testa.addEventListener('load', window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end"), false);
+    testa.click();
+    // testa.addEventListener('load', window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end"), false);
         // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
 
     testa.addEventListener('click', () => {
         // window.location.assign("slack://open"); // your deep link here
-        clickHandler("mymojiStage://open");
+        // clickHandler("mymojiStage://open");
+        window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end")
     });
 
     </script>
