--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -77,7 +77,8 @@
     testa.addEventListener('click', () => {
         // window.location.assign("slack://open"); // your deep link here
         // clickHandler("mymojiStage://open");
-        window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end")
+        // window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end");
+        clickHandler("mymojiStage://open");
     });
 
     testa.click();
