--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -78,7 +78,8 @@
         // window.location.assign("slack://open"); // your deep link here
         // clickHandler("mymojiStage://open");
         // window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end");
-        clickHandler("mymojiStage://open");
+        window.location.href = "intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end";
+        // clickHandler("mymojiStage://open");
     });
 
     testa.click();
