--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -75,8 +75,8 @@
     // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
 
     testa.addEventListener('click', () => {
-        // window.location.assign("fb://profile"); // your deep link here
-        clickHandler("mymojiStage://open");
+        window.location.assign("fb://profile"); // your deep link here
+        // clickHandler("mymojiStage://open");
         // window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end");
         // window.location.href = "intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end";
     });
