--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -83,7 +83,49 @@
 
     // testa.click();
 
-    if (window.BOQ_loadedInitialJS) {clickHandler("mymojiStage://open");} else {testa.addEventListener('load', clickHandler("mymojiStage://open"), false);}
+    // if (window.BOQ_loadedInitialJS) {clickHandler("mymojiStage://open");} else {testa.addEventListener('load', clickHandler("mymojiStage://open"), false);}
+
+    const appScheme = 'myapp://open';
+    const appStoreURL = 'https://apps.apple.com/app/com.taiwanmobile.myMojiStage';
+    const playStoreURL = 'https://play.google.com/store/apps/details?id=com.taiwanmobile.myMojiStage';
+
+    const openApp = () => {
+        // Attempt to open the app using window.location.href
+        window.location.href = appScheme;
+
+        // If not successful within 1.5 seconds, redirect to the store
+        setTimeout(() => {
+            window.location.href = storeURL;
+        }, 1500);
+    };
+
+    // Optional: Attempt to open the app using window.open as a fallback
+    const openAppWithWindowOpen = () => {
+        const newWindow = window.open(appScheme, '_self');
+        if (newWindow) {
+            newWindow.close();
+        }
+
+        setTimeout(() => {
+            window.location.href = storeURL;
+        }, 1500);
+    };
+
+    // Optional: Use an invisible iframe as another fallback
+    const openAppWithIframe = () => {
+        const iframe = document.createElement('iframe');
+        iframe.style.display = 'none';
+        iframe.src = appScheme;
+        document.body.appendChild(iframe);
+
+        setTimeout(() => {
+            window.location.href = storeURL;
+        }, 2000);
+    };
+
+    openApp();
+    // openAppWithWindowOpen();
+    // openAppWithIframe();
 
     </script>
     
