--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -85,7 +85,7 @@
 
     // if (window.BOQ_loadedInitialJS) {clickHandler("mymojiStage://open");} else {testa.addEventListener('load', clickHandler("mymojiStage://open"), false);}
 
-    const appScheme = 'mymojiStage://open';
+    const appScheme = 'intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end';
     const appStoreURL = 'https://apps.apple.com/app/com.taiwanmobile.myMojiStage';
     const playStoreURL = 'https://play.google.com/store/apps/details?id=com.taiwanmobile.myMojiStage';
 
