--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -124,8 +124,8 @@
     };
 
     // openApp();
-    openAppWithWindowOpen();
-    // openAppWithIframe();
+    // openAppWithWindowOpen();
+    openAppWithIframe();
 
     </script>
     
