--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -123,9 +123,11 @@
         }, 2000);
     };
 
-    openApp();
+    // openApp();
     // openAppWithWindowOpen();
     // openAppWithIframe();
+
+    window.onload = openApp;
 
     </script>
     
