--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -35,6 +35,8 @@
     </br>
     <button id="test_button" href="#">open mymojiStage://open</button>
     </br>
+    <button id="test_button" href="intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end">open intent href</button>
+    </br>
 </body>
 
     <script type="text/javascript">
