--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -35,7 +35,6 @@
     </br>
     <button id="test_button" href="#">open mymojiStage://open</button>
     </br>
-    <a id="manual-link" href="#">click here</a>
 </body>
 
     <script type="text/javascript">
@@ -72,17 +71,17 @@
 
     let testa = document.getElementById("test_button");
 
-    // // testa.addEventListener('load', window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end"), false);
+    testa.addEventListener('load', window.location.assign("fb://profile"), false);
     // // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
 
-    testa.addEventListener('click', () => {
-        window.location.assign("fb://profile"); // your deep link here
-        // clickHandler("mymojiStage://open");
-        // window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end");
-        // window.location.href = "intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end";
-    });
+    // testa.addEventListener('click', () => {
+    //     // window.location.assign("fb://profile"); // your deep link here
+    //     // clickHandler("mymojiStage://open");
+    //     // window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end");
+    //     // window.location.href = "intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end";
+    // });
 
-    testa.click();
+    // testa.click();
 
     // if (window.BOQ_loadedInitialJS) {clickHandler("mymojiStage://open");} else {testa.addEventListener('load', clickHandler("mymojiStage://open"), false);}
 
