--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -66,22 +66,22 @@
         return false;
     }
         
-    // let testa = document.getElementById("test");
-    // testa.click();
-
-    let testa = document.getElementById("test_button");
-
-    // testa.addEventListener('load', window.location.assign("fb://profile"), false);
-    // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
-
-    testa.addEventListener('click', () => {
-        // window.location.assign("fb://profile"); // your deep link here
-        // clickHandler("fb://profile");
-        // window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end");
-        window.location.href = "intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end";
-    });
-
+    let testa = document.getElementById("test");
     testa.click();
+
+    // let testa = document.getElementById("test_button");
+
+    // // testa.addEventListener('load', window.location.assign("fb://profile"), false);
+    // // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
+
+    // testa.addEventListener('click', () => {
+    //     // window.location.assign("fb://profile"); // your deep link here
+    //     // clickHandler("fb://profile");
+    //     window.location.assign("intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end");
+    //     // window.location.href = "intent://open?ln=/page_sticker_store#Intent;scheme=mymojiStage;package=com.taiwanmobile.myMojiStage;end";
+    // });
+
+    // testa.click();
 
     // if (window.BOQ_loadedInitialJS) {clickHandler("mymojiStage://open");} else {testa.addEventListener('load', clickHandler("mymojiStage://open"), false);}
 
