--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -65,14 +65,15 @@
         deeplink.open(uri);
         return false;
     }
-        
-    let testa = document.getElementById("test");
-    testa.click();
 
-    // let testa = document.getElementById("test_button");
+    //無效
+    // let testa = document.getElementById("test");
+    // testa.click();
 
-    // // testa.addEventListener('load', window.location.assign("fb://profile"), false);
-    // // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
+    let testa = document.getElementById("test_button");
+
+    // testa.addEventListener('load', window.location.assign("fb://profile"), false);
+    testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
 
     // testa.addEventListener('click', () => {
     //     // window.location.assign("fb://profile"); // your deep link here
