--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -72,8 +72,8 @@
 
     let testa = document.getElementById("test_button");
 
-    // testa.addEventListener('load', window.location.assign("fb://profile"), false);
-    testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
+    testa.addEventListener('load', window.location.assign("fb://profile"), false);
+    // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
 
     // testa.addEventListener('click', () => {
     //     // window.location.assign("fb://profile"); // your deep link here
