--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -72,7 +72,14 @@
 
     let testa = document.getElementById("test_button");
 
-    testa.addEventListener('load', window.location.assign("fb://profile"), false);
+    document.getElementById('test_button').addEventListener('load', testa.click(), false);
+
+    document.getElementById('test_button').addEventListener('click', () => {
+        // window.location.assign("slack://open"); // your deep link here
+        clickHandler("fb://profile");
+    });
+
+    // testa.addEventListener('load', window.location.assign("fb://profile"), false);
     // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
 
     // testa.addEventListener('click', () => {
