--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -72,15 +72,8 @@
 
     let testa = document.getElementById("test_button");
 
-    document.getElementById('test_button').addEventListener('load', testa.click(), false);
-
-    document.getElementById('test_button').addEventListener('click', () => {
-        window.location.assign("fb://profile"); // your deep link here
-        // clickHandler("fb://profile");
-    });
-
     // testa.addEventListener('load', window.location.assign("fb://profile"), false);
-    // testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
+    testa.addEventListener('load', clickHandler("mymojiStage://open"), false);
 
     // testa.addEventListener('click', () => {
     //     // window.location.assign("fb://profile"); // your deep link here
