--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -68,10 +68,10 @@
 
     //無效
     let testa = document.getElementById("test");
-    // testa.click();
+    testa.click();
 
     // testa.addEventListener('load', window.location.assign("fb://profile"), false);
-    document.getElementById("test_button").addEventListener('load', testa.click(), false);
+    // document.getElementById("test_button").addEventListener('load', testa.click(), false);
 
     // testa.addEventListener('click', () => {
     //     // window.location.assign("fb://profile"); // your deep link here
