--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -51,10 +51,11 @@
     //     }
     // });
 
+    //1558996892
     deeplink.setup({
         iOS: {
-            appId: "1558996892",
-            appName: "mymoji",
+            appId: "1571072463",
+            appName: "mymojiStage",
         },
         android: {
             appId: "com.taiwanmobile.myMojiStage"
