--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -54,11 +54,11 @@
     //1558996892
     deeplink.setup({
         iOS: {
-            appId: "1571072463",
-            appName: "mymojiStage",
+            appId: "1558996892",
+            appName: "mymoji",
         },
         android: {
-            appId: "com.taiwanmobile.myMojiStage"
+            appId: "com.taiwanmobile.myMojiApp"
         }
     });
 
