--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -33,9 +33,9 @@
     </br>
 
     <h3>舊連結測試</h3>
-    <a href="#" data-uri="https://mymojistage.page.link/page_sticker_store" onclick="clickHandler(this.dataset.uri)">old 貼圖商店</a>
+    <a href="#" data-uri="https://mymojistage.page.link/store" onclick="clickHandler(this.dataset.uri)">old 貼圖商店</a>
     </br>
-    <a href="#" data-uri="https://mymojistage.page.link/delete_avatar" onclick="clickHandler(this.dataset.uri)">old 刪除模型</a>
+    <a href="#" data-uri="https://mymojistage.page.link/deleteAvatar" onclick="clickHandler(this.dataset.uri)">old 刪除模型</a>
     </br>
     <a href="#" data-uri="https://mymojistage.page.link/download" onclick="clickHandler(this.dataset.uri)">old download</a>
     </br>
