--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -25,11 +25,11 @@
     <h3>新連結測試</h3>
     <a id="test" href="#" data-uri="mymojiStage://open" onclick="clickHandler(this.dataset.uri)">mymojiStage://open</a>
     </br>
-    <a href="#" data-uri="mymojiStage://open?action=page_sticker_store" onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
+    <a href="#" data-uri="mymojiStage://open?action=page_sticker_store&state=webstate" onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
     </br>
-    <a href="#" data-uri="mymojiStage://open?action=delete_avatar" onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
+    <a href="#" data-uri="mymojiStage://open?action=delete_avatar&state=webstate" onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
     </br>
-    <a href="#" data-uri="mymojiStage://open?action=appearance_setting&avatarId=123456" onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
+    <a href="#" data-uri="mymojiStage://open?action=appearance_setting&avatarId=12378&state=webstate" onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
     </br>
 
     <h3>舊連結測試</h3>
