--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -27,11 +27,11 @@
     </br>
     <a id="test" href="#" data-uri="ijomymStage://open" onclick="clickHandler(this.dataset.uri)">ijomymStage://open</a>
     </br>
-    <a href="#" data-uri="ijomymStage://open?action=page_sticker_store&state=webstate" onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
+    <a href="#" data-uri="ijomymStage://open?action=page_sticker_store&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
     </br>
-    <a href="#" data-uri="ijomymStage://open?action=delete_avatar&state=webstate" onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
+    <a href="#" data-uri="ijomymStage://open?action=delete_avatar&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
     </br>
-    <a href="#" data-uri="ijomymStage://open?action=appearance_setting&avatarId=12378&state=webstate" onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
+    <a href="#" data-uri="ijomymStage://open?action=appearance_setting&avatarId=12378&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
     </br>
 
     <h3>舊連結測試</h3>
@@ -39,7 +39,11 @@
     </br>
     <a href="#" data-uri="https://mymojistage.page.link/deleteAvatar" onclick="clickHandler(this.dataset.uri)">old 刪除模型</a>
     </br>
+    <a href="#" data-uri="https://mymojistage.page.link/campaign_card" onclick="clickHandler(this.dataset.uri)">old 賀卡</a>
+    </br>
     <a href="#" data-uri="https://mymojistage.page.link/download" onclick="clickHandler(this.dataset.uri)">old download</a>
+    </br>
+    <a href="#" data-uri="https://mymojiapp.page.link/delete_avatar" onclick="clickHandler(this.dataset.uri)">old p刪除模型</a>
     </br>
 
     <h3>開發測試</h3>
