--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h3>新連結測試</h3>
+    <!-- <h3>新連結測試</h3>
     <a id="test" href="#" data-uri="ijomymStage://open" onclick="clickHandler(this.dataset.uri)">ijomymStage://open</a>
     </br>
     <a href="#" data-uri="ijomymStage://open?action=page_sticker_store&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
@@ -34,6 +34,44 @@
     </br>
     <input id="avatarInput" type="text" placeholder="輸入 avatarId"/>
     <a href="#" data-uri="ijomymStage://open?action=appearance_setting&avatarId=<avatarId>&code=testttt&redirect_uri=https%3A%2F%2Fwww.google.com" onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
+    </br> -->
+
+    <a id="test" href="#" data-uri="ijomymStage://open" onclick="clickHandler(this.dataset.uri)">測試環境純開啟</a>
+    </br>
+
+    <h3>Deep Link 同帳號</h3>
+    <a href="#"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&state=webstate&state=appstate&scopes=31&code=pass"
+        onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
+    </br>
+    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar&state=webstate&state=appstate&scopes=31&code=pass"
+        onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
+    </br>
+    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=campaign_card&state=webstate&state=appstate&scopes=31&code=pass"
+        onclick="clickHandler(this.dataset.uri)">new 賀卡</a>
+    </br>
+    <input id="avatarInput" type="text" placeholder="輸入 avatarId" />
+    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&avatarId=<avatarId>&state=webstate&state=appstate&scopes=31&code=pass" 
+        onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
+    </br>
+
+    <h3>Deep Link 不同帳號</h3>
+    <a href="#"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&state=webstate&state=appstate&scopes=31&code=fail"
+        onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
+    </br>
+    <a href="#"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar&state=webstate&state=appstate&scopes=31&code=fail"
+        onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
+    </br>
+    <a href="#"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=campaign_card&state=webstate&state=appstate&scopes=31&code=fail"
+        onclick="clickHandler(this.dataset.uri)">new 賀卡</a>
+    </br>
+    <input id="avatarInput" type="text" placeholder="輸入 avatarId" />
+    <a href="#"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&avatarId=<avatarId>&state=webstate&state=appstate&scopes=31&code=fail"
+        onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
     </br>
 
     <h3>舊連結測試</h3>
