--- a/testlink/deepLinkTest/example.html
+++ b/testlink/deepLinkTest/example.html
@@ -39,6 +39,14 @@
     <a id="test" href="#" data-uri="ijomymStage://open" onclick="clickHandler(this.dataset.uri)">測試環境純開啟</a>
     </br>
 
+    <h3>純替代方案</h3>
+    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store"
+        onclick="clickHandler(this.dataset.uri)">new 貼圖商店</a>
+    </br>
+    <a href="#" data-uri="https://uat.mymoji.com.tw/redirect-link/?action=delete_avatar"
+        onclick="clickHandler(this.dataset.uri)">new 刪除模型</a>
+    </br>
+
     <h3>Deep Link 同帳號</h3>
     <a href="#"
         data-uri="https://uat.mymoji.com.tw/redirect-link/?action=page_sticker_store&state=webstate&state=appstate&scopes=31&code=pass"
@@ -68,9 +76,8 @@
         data-uri="https://uat.mymoji.com.tw/redirect-link/?action=campaign_card&state=webstate&state=appstate&scopes=31&code=fail"
         onclick="clickHandler(this.dataset.uri)">new 賀卡</a>
     </br>
-    <input id="avatarInput" type="text" placeholder="輸入 avatarId" />
     <a href="#"
-        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&avatarId=<avatarId>&state=webstate&state=appstate&scopes=31&code=fail"
+        data-uri="https://uat.mymoji.com.tw/redirect-link/?action=appearance_setting&avatarId=0&state=webstate&state=appstate&scopes=31&code=fail"
         onclick="clickHandler(this.dataset.uri)">new 編輯外觀</a>
     </br>
 
